--- a/provider-demo/pom.xml
+++ b/provider-demo/pom.xml
@@ -53,6 +53,11 @@
 			<artifactId>dubbo-spring-boot-starter</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+			<version>0.2</version>
+        </dependency>
 	</dependencies>
 
 	<build>
