--- a/provider-demo/src/main/resources/application.yml
+++ b/provider-demo/src/main/resources/application.yml
@@ -2,6 +2,11 @@ spring:
   application:
     name: dubbo-springboot-provider
   dubbo:
+    application:
+      name: dubbo-provider-1
+    protocol:
+      name: dubbo
+      port: 20800 
     server: true
     registry: zookeeper://localhost:2181
 server:
