Update consumer to consume a service

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,16 +4,27 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+
         {
             "type": "java",
-            "name": "Debug (Launch)-DemoApplication<provider-demo>",
+            "name": "Debug (Launch)-provider-demo",
             "request": "launch",
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
             "stopOnEntry": false,
             "mainClass": "com.abc.dubbo.demo.DemoApplication",
             "projectName": "provider-demo",
+            "args": ""
+        },
+        {
+            "type": "java",
+            "name": "Debug (Launch)-consumer-demo",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "console": "internalConsole",
+            "stopOnEntry": false,
+            "mainClass": "com.abc.dubbo.consumerdemo.ConsumerDemoApplication",
+            "projectName": "consumer-demo",
             "args": ""
         },
         {
