--- a/consumer-demo/src/main/resources/application.yml
+++ b/consumer-demo/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
   dubbo:
     application:
       name: dubbo-consumer-1
+      owner: testuser
     protocol:
       name: dubbo
     registry: zookeeper://localhost:2181
