--- a/provider-demo/src/main/resources/application.yml
+++ b/provider-demo/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     application:
       id: duboo-provider-app-1
       name: dubbo-provider-1
+      owner: testuser
     protocol:
       name: dubbo
       port: 20800 
