--- a/offical/dubbo-springboot-provider/pom.xml
+++ b/offical/dubbo-springboot-provider/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>dubbo</artifactId>
             <version>2.6.0</version>
         </dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo-rpc-rest</artifactId>
+            <version>2.6.0</version>
+		</dependency>
         <dependency>
             <groupId>com.101tec</groupId>
             <artifactId>zkclient</artifactId>
