--- a/offical/dubbo-springboot-provider/src/main/resources/application.yml
+++ b/offical/dubbo-springboot-provider/src/main/resources/application.yml
@@ -7,7 +7,9 @@ spring:
     application:
       name: dubbo-springboot-provider
     registry:
-      address: zookeeper://10.230.171.89:2181
+      address: zookeeper://192.168.137.95:2181
     protocol:
-      name: dubbo
-      port: 20800
+      dubbo:
+        port: 20800
+      rest:
+        port: 20801
