--- a/offical/dubbo-demo-api/pom.xml
+++ b/offical/dubbo-demo-api/pom.xml
@@ -29,4 +29,11 @@ limitations under the License.
     <properties>
         <skip_maven_deploy>true</skip_maven_deploy>
     </properties>
+    <dependencies>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo-rpc-rest</artifactId>
+            <version>2.6.0</version>
+		</dependency>
+    </dependencies>
 </project>
